fix bug: invisible input color

--- a/src/styles/component/_form.sass
+++ b/src/styles/component/_form.sass
@@ -3,7 +3,6 @@ input
   height: 30px
   // border-radius: 8px
   background-color: $dark
-  color: $white
   width: 400px
   @media only screen and (max-width: $desktopBreakpoint)
     width: 270px
